fix none value error

--- a/notebooks/resource_mapping.ipynb
+++ b/notebooks/resource_mapping.ipynb
@@ -2,36 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
-    "from setting import config_read"
+    "from setting import config_read\n",
+    "from mapping import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from konlpy.tag import Okt\n",
     "from owlready2 import get_ontology\n",
     "from elasticsearch import Elasticsearch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "okt = Okt()\n",
+    "\n",
+    "query = input(\"Question: \") # 용감한 형제가 작곡한 노래의 장르는?\n",
+    "query_pos = okt.pos(query, norm=True)\n",
+    "\n",
+    "query_terms = [q[0] for q in query_pos if q[1] not in [\"Josa\", \"Punctuation\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -79,21 +87,7 @@
     }
    ],
    "source": [
-    "query_terms = ['용감한','형제','작곡','노래','장르']\n",
-    "\n",
-    "query_patitions = [[\" \".join(query_terms)]]\n",
-    "\n",
-    "for slice_num in range(1,len(query_terms)):\n",
-    "    for slice_list in itertools.combinations(range(len(query_terms)-1), slice_num):\n",
-    "        qp = []\n",
-    "        qp.append(\" \".join(query_terms[:slice_list[0]+1]))\n",
-    "        \n",
-    "        for s_i, slice_idx in enumerate(slice_list):\n",
-    "            if s_i == len(slice_list) - 1 : break\n",
-    "            qp.append(\" \".join(query_terms[slice_idx+1:slice_list[s_i+1]+1]))\n",
-    "\n",
-    "        qp.append(\" \".join(query_terms[slice_list[-1]+1:]))\n",
-    "        query_patitions.append(qp)\n",
+    "query_patitions = query_patitioning(query_terms)\n",
     "\n",
     "print(\"Query Term Set:\", query_terms)\n",
     "print(\"Query Partitions Set:\")\n",
@@ -103,61 +97,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 7.171753, 0, 6.5522356, 0, 0, 6.5522356, 14.343506, 13.7239886, 13.7239886, 7.171753, 6.5522356, 13.7239886, 28.0674946, 20.8957416]\n"
+      "[0, 0, 7.171753, 0, 6.5522356, 0, 0, 6.5522356, 14.343506, 13.7239886, 13.7239886, 7.171753, 6.5522356, 13.7239886, 28.0674946, 20.8957416]\n",
+      "['용감한 형제', '작곡', '노래', '장르']\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['용감한 형제', '작곡', '노래', '장르']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "score_list = []\n",
-    "\n",
-    "for qp in query_patitions:\n",
-    "    score = 0\n",
-    "    for q in qp:\n",
-    "        search_query = {\"query\":{\"term\":{\"Annotation Values.keyword\": q}}}\n",
-    "        data = es.search(index=index_name, body=search_query)\n",
-    "        if data['hits']['max_score'] :\n",
-    "            score += data['hits']['max_score']\n",
-    "    score_list.append(score)\n",
-    "\n",
+    "p_star, score_list = partition_scoring(es, index_name, query_patitions)\n",
     "print(score_list)\n",
-    "p_star = query_patitions[np.argmax(score_list)]\n",
-    "p_star"
+    "print(p_star)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "candidates_list = []\n",
-    "for q in p_star:\n",
-    "    earch_query = {\"query\":{\"term\":{\"Annotation Values.keyword\": q}}}\n",
-    "    candidates = es.search(index=index_name, body=earch_query)['hits']['hits']\n",
-    "    candidates_list.append(candidates)\n",
-    "resource_combinations = list(itertools.product(*candidates_list))"
+    "# candidates_list = []\n",
+    "# for q in p_star:\n",
+    "#     earch_query = {\"query\":{\"term\":{\"Annotation Values.keyword\": q}}}\n",
+    "#     candidates = es.search(index=index_name, body=earch_query)['hits']['hits']\n",
+    "#     candidates_list.append(candidates)\n",
+    "# resource_combinations = list(itertools.product(*candidates_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
