--- a/notebooks/conceptual_graph.ipynb
+++ b/notebooks/conceptual_graph.ipynb
@@ -20,13 +20,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n"
+      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
+      "\n",
+      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "from owlready2 import get_ontology\n",
+    "from owlready2 import *\n",
     "from elasticsearch import Elasticsearch\n",
     "from mapping import *"
    ]
@@ -60,26 +63,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(data.용감한_형제, data.isComposedBy, mo.Track, data.hasGenre),\n",
-       " (data.용감한_형제, data.isComposedBy, mo.Track, data.Genre)]"
+       "[(SKMO_v2.4_0223.This_Love_G_dragon_Solo,\n",
+       "  SKMO_v2.4_0223.isSungBy,\n",
+       "  SKMO_v2.4_0223.지드래곤,\n",
+       "  mo.member_of,\n",
+       "  mo.MusicGroup),\n",
+       " (SKMO_v2.4_0223.This_Love_G_dragon_Solo,\n",
+       "  SKMO_v2.4_0223.isSungBy,\n",
+       "  SKMO_v2.4_0223.지드래곤,\n",
+       "  schema.affiliation,\n",
+       "  mo.MusicGroup)]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query_terms = ['용감한 형제', '작곡', '노래', '장르']\n",
-    "# query_terms = ['소녀시대', '부른', '노래']\n",
-    "# query_terms = ['지드래곤', '구성원', '그룹']\n",
-    "# query_terms = ['빅뱅', '리더', '본명']\n",
+    "query_terms = ['This Love', '부른', '지드래곤', '소속', '음악 그룹']\n",
+    "# query_terms = ['노래', '부른', '가수']\n",
     "\n",
     "query_patitions = query_patitioning(query_terms)\n",
     "p_star, score_list = partition_scoring(es, index_name, query_patitions)\n",
@@ -90,17 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['vertex', 'edge', 'vertex', 'edge', 'vertex']\n",
-      "[(data.용감한_형제, data.isComposedBy, mo.Track), (mo.Track, data.hasGenre, 'owl.Thing')]\n",
-      "['vertex', 'edge', 'vertex', 'edge', 'vertex']\n",
-      "[(data.용감한_형제, data.isComposedBy, mo.Track), (mo.Track, 'Any P', data.Genre)]\n"
+      "[(SKMO_v2.4_0223.This_Love_G_dragon_Solo, SKMO_v2.4_0223.isSungBy, SKMO_v2.4_0223.지드래곤), (SKMO_v2.4_0223.지드래곤, mo.member_of, mo.MusicGroup)]\n",
+      "[(SKMO_v2.4_0223.This_Love_G_dragon_Solo, SKMO_v2.4_0223.isSungBy, SKMO_v2.4_0223.지드래곤), (SKMO_v2.4_0223.지드래곤, schema.affiliation, mo.MusicGroup)]\n"
      ]
     }
    ],
@@ -138,39 +145,37 @@
     "    for offset in range(0,len(rc)-2, 2):\n",
     "        conceptual_arc.append(tuple(rc[offset:offset+3]))\n",
     "    \n",
-    "    print(state_list)\n",
     "    print(conceptual_arc)\n",
     "\n",
-    "    conceptual_graph.append(conceptual_arc)\n",
-    "\n",
-    "# for conceptual_arc in conceptual_graph:\n",
-    "#     print(conceptual_arc)"
+    "    conceptual_graph.append(conceptual_arc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "conceptual_arc = {}\n",
     "df_list = []\n",
     "\n",
-    "for conceptual_arc in conceptual_graph:\n",
+    "for conceptual_arc in conceptual_graph[:1]:\n",
     "    for s, p, o in conceptual_arc:\n",
-    "        # print(unit_path_df[unit_path_df['S'] == s and unit_path_df['P'] == p and unit_path_df['O'] == o])\n",
-    "        s_cond = unit_path_df['S'] == str(s)\n",
-    "        p_cond = unit_path_df['P'] == str(p)\n",
-    "        # o_cond = unit_path_df['range'] == str(o)\n",
+    "        s_cond = unit_path_df['S'] == str(s) \n",
+    "        d_cond = unit_path_df['domain'] == str(s)\n",
     "\n",
-    "        df = unit_path_df.loc[s_cond & p_cond, ['S', 'P', 'O', 'W']]\n",
-    "    \n",
-    "    df_list.append(df)"
+    "        p_cond = unit_path_df['P'] == str(p) \n",
+    "\n",
+    "        o_cond = unit_path_df['O'] == str(o) \n",
+    "        r_cond = unit_path_df['range'] == str(o)\n",
+    "\n",
+    "        df = unit_path_df.loc[(s_cond|d_cond) & p_cond & (o_cond|r_cond)]\n",
+    "        df_list.append(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -197,27 +202,83 @@
        "      <th>S</th>\n",
        "      <th>P</th>\n",
        "      <th>O</th>\n",
+       "      <th>domain</th>\n",
+       "      <th>range</th>\n",
+       "      <th>S_dpr</th>\n",
+       "      <th>S_dr</th>\n",
        "      <th>W</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1001</th>\n",
-       "      <td>data.빅뱅</td>\n",
-       "      <td>data.hasLeader</td>\n",
-       "      <td>data.지드래곤</td>\n",
-       "      <td>0.75</td>\n",
+       "      <th>190</th>\n",
+       "      <td>SKMO_v2.4_0223.This_Love_G_dragon_Solo</td>\n",
+       "      <td>SKMO_v2.4_0223.isSungBy</td>\n",
+       "      <td>SKMO_v2.4_0223.지드래곤</td>\n",
+       "      <td>mo.Track</td>\n",
+       "      <td>SKMO_v2.4_0223.MusicArtist</td>\n",
+       "      <td>48</td>\n",
+       "      <td>124</td>\n",
+       "      <td>0.387097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>328</th>\n",
+       "      <td>SKMO_v2.4_0223.This_Love_G_dragon_Solo</td>\n",
+       "      <td>SKMO_v2.4_0223.isSungBy</td>\n",
+       "      <td>SKMO_v2.4_0223.지드래곤</td>\n",
+       "      <td>mo.Track</td>\n",
+       "      <td>foaf.Person</td>\n",
+       "      <td>31</td>\n",
+       "      <td>145</td>\n",
+       "      <td>0.213793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507</th>\n",
+       "      <td>SKMO_v2.4_0223.지드래곤</td>\n",
+       "      <td>mo.member_of</td>\n",
+       "      <td>SKMO_v2.4_0223.빅뱅</td>\n",
+       "      <td>SKMO_v2.4_0223.MusicArtist</td>\n",
+       "      <td>mo.MusicGroup</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>545</th>\n",
+       "      <td>SKMO_v2.4_0223.지드래곤</td>\n",
+       "      <td>mo.member_of</td>\n",
+       "      <td>SKMO_v2.4_0223.빅뱅</td>\n",
+       "      <td>foaf.Person</td>\n",
+       "      <td>mo.MusicGroup</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            S               P          O     W\n",
-       "1001  data.빅뱅  data.hasLeader  data.지드래곤  0.75"
+       "                                          S                        P  \\\n",
+       "190  SKMO_v2.4_0223.This_Love_G_dragon_Solo  SKMO_v2.4_0223.isSungBy   \n",
+       "328  SKMO_v2.4_0223.This_Love_G_dragon_Solo  SKMO_v2.4_0223.isSungBy   \n",
+       "507                     SKMO_v2.4_0223.지드래곤             mo.member_of   \n",
+       "545                     SKMO_v2.4_0223.지드래곤             mo.member_of   \n",
+       "\n",
+       "                       O                      domain  \\\n",
+       "190  SKMO_v2.4_0223.지드래곤                    mo.Track   \n",
+       "328  SKMO_v2.4_0223.지드래곤                    mo.Track   \n",
+       "507    SKMO_v2.4_0223.빅뱅  SKMO_v2.4_0223.MusicArtist   \n",
+       "545    SKMO_v2.4_0223.빅뱅                 foaf.Person   \n",
+       "\n",
+       "                          range  S_dpr  S_dr         W  \n",
+       "190  SKMO_v2.4_0223.MusicArtist     48   124  0.387097  \n",
+       "328                 foaf.Person     31   145  0.213793  \n",
+       "507               mo.MusicGroup     23    23  1.000000  \n",
+       "545               mo.MusicGroup     40    40  1.000000  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
