change weight to distance

--- a/notebooks/conceptual_graph.ipynb
+++ b/notebooks/conceptual_graph.ipynb
@@ -31,7 +31,8 @@
     "import pandas as pd\n",
     "from owlready2 import *\n",
     "from elasticsearch import Elasticsearch\n",
-    "from mapping import *"
+    "from mapping import *\n",
+    "from konlpy.tag import Okt"
    ]
   },
   {
@@ -63,33 +64,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "okt = Okt()\n",
+    "\n",
+    "query = input(\"Question: \") # 용감한 형제가 작곡한 노래의 장르는?\n",
+    "query_pos = okt.pos(query, norm=True)\n",
+    "\n",
+    "query_terms = [q[0] for q in query_pos if q[1] not in [\"Josa\", \"Punctuation\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(SKMO_v2.4_0223.This_Love_G_dragon_Solo,\n",
-       "  SKMO_v2.4_0223.isSungBy,\n",
-       "  SKMO_v2.4_0223.지드래곤,\n",
-       "  mo.member_of,\n",
-       "  mo.MusicGroup),\n",
-       " (SKMO_v2.4_0223.This_Love_G_dragon_Solo,\n",
-       "  SKMO_v2.4_0223.isSungBy,\n",
-       "  SKMO_v2.4_0223.지드래곤,\n",
-       "  schema.affiliation,\n",
-       "  mo.MusicGroup)]"
+       "[(SKMO_v2.4_0223.뱅뱅뱅, SKMO_v2.4_0223.isComposedBy, foaf.Person),\n",
+       " (SKMO_v2.4_0223.뱅뱅뱅_inst, SKMO_v2.4_0223.isComposedBy, foaf.Person),\n",
+       " (SKMO_v2.4_0223.뱅뱅뱅_황치열, SKMO_v2.4_0223.isComposedBy, foaf.Person)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query_terms = ['This Love', '부른', '지드래곤', '소속', '음악 그룹']\n",
-    "# query_terms = ['노래', '부른', '가수']\n",
-    "\n",
     "query_patitions = query_patitioning(query_terms)\n",
     "p_star, score_list = partition_scoring(es, index_name, query_patitions)\n",
     "candidates_list = [onto.search(label=query) for query in p_star]\n",
@@ -99,15 +104,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SKMO_v2.4_0223.MusicArtist, foaf.Person]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "onto.지드래곤.is_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(SKMO_v2.4_0223.This_Love_G_dragon_Solo, SKMO_v2.4_0223.isSungBy, SKMO_v2.4_0223.지드래곤), (SKMO_v2.4_0223.지드래곤, mo.member_of, mo.MusicGroup)]\n",
-      "[(SKMO_v2.4_0223.This_Love_G_dragon_Solo, SKMO_v2.4_0223.isSungBy, SKMO_v2.4_0223.지드래곤), (SKMO_v2.4_0223.지드래곤, schema.affiliation, mo.MusicGroup)]\n"
+      "[(SKMO_v2.4_0223.뱅뱅뱅, SKMO_v2.4_0223.isComposedBy, foaf.Person)]\n",
+      "[(SKMO_v2.4_0223.뱅뱅뱅_inst, SKMO_v2.4_0223.isComposedBy, foaf.Person)]\n",
+      "[(SKMO_v2.4_0223.뱅뱅뱅_황치열, SKMO_v2.4_0223.isComposedBy, foaf.Person)]\n"
      ]
     }
    ],
@@ -152,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -211,74 +237,42 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>190</th>\n",
-       "      <td>SKMO_v2.4_0223.This_Love_G_dragon_Solo</td>\n",
-       "      <td>SKMO_v2.4_0223.isSungBy</td>\n",
-       "      <td>SKMO_v2.4_0223.지드래곤</td>\n",
-       "      <td>mo.Track</td>\n",
-       "      <td>SKMO_v2.4_0223.MusicArtist</td>\n",
-       "      <td>48</td>\n",
-       "      <td>124</td>\n",
-       "      <td>0.387097</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>328</th>\n",
-       "      <td>SKMO_v2.4_0223.This_Love_G_dragon_Solo</td>\n",
-       "      <td>SKMO_v2.4_0223.isSungBy</td>\n",
+       "      <th>364</th>\n",
+       "      <td>SKMO_v2.4_0223.뱅뱅뱅</td>\n",
+       "      <td>SKMO_v2.4_0223.isComposedBy</td>\n",
        "      <td>SKMO_v2.4_0223.지드래곤</td>\n",
        "      <td>mo.Track</td>\n",
        "      <td>foaf.Person</td>\n",
-       "      <td>31</td>\n",
+       "      <td>36</td>\n",
        "      <td>145</td>\n",
-       "      <td>0.213793</td>\n",
+       "      <td>0.248276</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>507</th>\n",
-       "      <td>SKMO_v2.4_0223.지드래곤</td>\n",
-       "      <td>mo.member_of</td>\n",
-       "      <td>SKMO_v2.4_0223.빅뱅</td>\n",
-       "      <td>SKMO_v2.4_0223.MusicArtist</td>\n",
-       "      <td>mo.MusicGroup</td>\n",
-       "      <td>23</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>545</th>\n",
-       "      <td>SKMO_v2.4_0223.지드래곤</td>\n",
-       "      <td>mo.member_of</td>\n",
-       "      <td>SKMO_v2.4_0223.빅뱅</td>\n",
+       "      <th>382</th>\n",
+       "      <td>SKMO_v2.4_0223.뱅뱅뱅</td>\n",
+       "      <td>SKMO_v2.4_0223.isComposedBy</td>\n",
+       "      <td>SKMO_v2.4_0223.Teddy</td>\n",
+       "      <td>mo.Track</td>\n",
        "      <td>foaf.Person</td>\n",
-       "      <td>mo.MusicGroup</td>\n",
-       "      <td>40</td>\n",
-       "      <td>40</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>36</td>\n",
+       "      <td>145</td>\n",
+       "      <td>0.248276</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                          S                        P  \\\n",
-       "190  SKMO_v2.4_0223.This_Love_G_dragon_Solo  SKMO_v2.4_0223.isSungBy   \n",
-       "328  SKMO_v2.4_0223.This_Love_G_dragon_Solo  SKMO_v2.4_0223.isSungBy   \n",
-       "507                     SKMO_v2.4_0223.지드래곤             mo.member_of   \n",
-       "545                     SKMO_v2.4_0223.지드래곤             mo.member_of   \n",
+       "                      S                            P                     O  \\\n",
+       "364  SKMO_v2.4_0223.뱅뱅뱅  SKMO_v2.4_0223.isComposedBy   SKMO_v2.4_0223.지드래곤   \n",
+       "382  SKMO_v2.4_0223.뱅뱅뱅  SKMO_v2.4_0223.isComposedBy  SKMO_v2.4_0223.Teddy   \n",
        "\n",
-       "                       O                      domain  \\\n",
-       "190  SKMO_v2.4_0223.지드래곤                    mo.Track   \n",
-       "328  SKMO_v2.4_0223.지드래곤                    mo.Track   \n",
-       "507    SKMO_v2.4_0223.빅뱅  SKMO_v2.4_0223.MusicArtist   \n",
-       "545    SKMO_v2.4_0223.빅뱅                 foaf.Person   \n",
-       "\n",
-       "                          range  S_dpr  S_dr         W  \n",
-       "190  SKMO_v2.4_0223.MusicArtist     48   124  0.387097  \n",
-       "328                 foaf.Person     31   145  0.213793  \n",
-       "507               mo.MusicGroup     23    23  1.000000  \n",
-       "545               mo.MusicGroup     40    40  1.000000  "
+       "       domain        range  S_dpr  S_dr         W  \n",
+       "364  mo.Track  foaf.Person     36   145  0.248276  \n",
+       "382  mo.Track  foaf.Person     36   145  0.248276  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
