--- a/notebooks/shortest_path_finding.ipynb
+++ b/notebooks/shortest_path_finding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,21 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_graph():\n",
-    "    G = nx.Graph()\n",
+    "    G = nx.DiGraph()\n",
     "\n",
     "    for index, row in unit_path.iterrows():\n",
-    "        source = row['domain']  # 출발 노드\n",
-    "        target = row['range']   # 도착 노드\n",
-    "        edge = row['P']         # 엣지\n",
-    "        weight = row['W']       # 엣지 가중치\n",
+    "        source = row['domain']  \n",
+    "        target = row['range']   \n",
+    "        edge = row['P']         \n",
+    "        weight = row['W']       \n",
     "\n",
-    "        G.add_node(source)      # 출발 노드 추가\n",
-    "        G.add_node(target)      # 도착 노드 추가\n",
+    "        G.add_node(source)        \n",
+    "        G.add_node(target)\n",
+    "\n",
+    "        if source in G and target in G[source].keys():\n",
+    "            if weight < G[source][target]['weight']:\n",
+    "                G.remove_edge(source, target)\n",
+    "            else: continue\n",
+    "            \n",
     "        G.add_edge(source, target, property=edge, weight=weight, label=edge)  # 엣지 추가\n",
     "    \n",
     "    return G"
@@ -45,61 +51,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def heuristic(start_node, target_node):\n",
-    "    w_values = unit_path[(unit_path['domain'] == start_node)]['W'].values\n",
-    "    # The heuristic function of the algorithm is based on the sum of property weights of each path\n",
-    "    if len(w_values) > 0:\n",
-    "        return min(w_values)\n",
-    "    else : \n",
-    "        return float('inf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['schema.MusicAlbum', 'foaf.Person', 'schema.Country']"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "G = generate_graph()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['schema.MusicAlbum', 'foaf.Person', 'schema.Country']"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "start_node = 'schema.MusicAlbum'\n",
-    "target_node = 'schema.Country'\n",
-    "\n",
-    "shortest_path = nx.shortest_path(G, start_node, target_node)\n",
-    "shortest_path"
+    "source_node = 'schema.MusicAlbum'\n",
+    "target_node = 'schema.Country'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def has_property(path, p_value):\n",
+    "    if p_value == None:\n",
+    "        return True\n",
+    "    \n",
+    "    p_values = []\n",
+    "    for i in range(len(path) - 1):\n",
+    "        source_node = path[i]\n",
+    "        target_node = path[i + 1]\n",
+    "        edge_data = G[source_node][target_node]\n",
+    "        p_values.append(edge_data['property'])\n",
+    "    return (p_value in p_values)"
    ]
   }
  ],
