finding shortest path with specified property

--- a/notebooks/shortest_path_finding.ipynb
+++ b/notebooks/shortest_path_finding.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "def generate_graph():\n",
-    "    G = nx.DiGraph()\n",
+    "    G = nx.MultiDiGraph()\n",
     "\n",
     "    for index, row in unit_path.iterrows():\n",
     "        source = row['domain']  \n",
@@ -38,11 +38,6 @@
     "\n",
     "        G.add_node(source)        \n",
     "        G.add_node(target)\n",
-    "\n",
-    "        if source in G and target in G[source].keys():\n",
-    "            if weight < G[source][target]['weight']:\n",
-    "                G.remove_edge(source, target)\n",
-    "            else: continue\n",
     "            \n",
     "        G.add_edge(source, target, property=edge, weight=weight, label=edge)  # 엣지 추가\n",
     "    \n",
@@ -70,21 +65,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['schema.MusicAlbum', 'mo.Track', 'mo.MusicGroup', 'schema.Country']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.shortest_path(G, source_node, target_node, weight='weight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def has_property(path, p_value):\n",
-    "    if p_value == None:\n",
-    "        return True\n",
+    "from heapq import heappop, heappush\n",
+    "from itertools import count\n",
+    "\n",
+    "TRIPLE_NUM = 4 # shortest path 길이 (triple 개수) 제한\n",
+    "\n",
+    "def _weight_function(weight):\n",
+    "    return lambda u, v, data: data.get(weight, 1)\n",
+    "\n",
+    "def find_shortest_path(G, source, target, p_name=None, weight=\"weight\"):\n",
+    "    push = heappush\n",
+    "    pop = heappop\n",
+    "    weight = _weight_function(weight)\n",
     "    \n",
-    "    p_values = []\n",
-    "    for i in range(len(path) - 1):\n",
-    "        source_node = path[i]\n",
-    "        target_node = path[i + 1]\n",
-    "        edge_data = G[source_node][target_node]\n",
-    "        p_values.append(edge_data['property'])\n",
-    "    return (p_value in p_values)"
+    "    c = count()\n",
+    "    fringe = []\n",
+    "    path = [source]\n",
+    "    result = []\n",
+    "\n",
+    "    if source == target:\n",
+    "        return result\n",
+    "    \n",
+    "    push(fringe, (0, next(c), source, path))\n",
+    "\n",
+    "    while fringe:\n",
+    "        (d, loop, v, path) = pop(fringe)\n",
+    "\n",
+    "        # if len(path)//2 >= TRIPLE_NUM:\n",
+    "        #     continue\n",
+    "\n",
+    "        if path[-1] == target:\n",
+    "            if p_name is None or p_name in path:\n",
+    "                result.append((d,path))\n",
+    "            continue\n",
+    "\n",
+    "        for u, edges in G._adj[v].items():\n",
+    "            if u in path:\n",
+    "                continue\n",
+    "            for _, e in edges.items():\n",
+    "                cost = weight(v, u, e)\n",
+    "                if cost is None:\n",
+    "                    continue\n",
+    "                vu_dist = d + cost\n",
+    "\n",
+    "                new_path = list()\n",
+    "                new_path += path\n",
+    "                new_path += [e['property'], u]\n",
+    "\n",
+    "                push(fringe, (vu_dist, next(c), u, new_path))\n",
+    "    \n",
+    "    if len(result) == 0:\n",
+    "        raise nx.NetworkXNoPath(f\"Node {target} not reachable from {source} with {p_name}\")\n",
+    "    \n",
+    "    return sorted(result)[0][1][::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['schema.MusicAlbum', 'mo.Track', 'mo.MusicGroup', 'schema.Country']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = find_shortest_path(G, source_node, target_node, p_name=None)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['schema.MusicAlbum',\n",
+       " 'mo.Track',\n",
+       " 'mo.MusicGroup',\n",
+       " 'foaf.Person',\n",
+       " 'schema.Country']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = find_shortest_path(G, source_node, target_node, p_name='schema.nationality')\n",
+    "result"
    ]
   }
  ],
