remove weight function

--- a/notebooks/shortest_path_finding.ipynb
+++ b/notebooks/shortest_path_finding.ipynb
@@ -94,13 +94,9 @@
     "\n",
     "TRIPLE_NUM = 4 # shortest path 길이 (triple 개수) 제한\n",
     "\n",
-    "def _weight_function(weight):\n",
-    "    return lambda u, v, data: data.get(weight, 1)\n",
-    "\n",
-    "def find_shortest_path(G, source, target, p_name=None, weight=\"weight\"):\n",
+    "def find_shortest_path(G, source, target, p_name=None):\n",
     "    push = heappush\n",
     "    pop = heappop\n",
-    "    weight = _weight_function(weight)\n",
     "    \n",
     "    c = count()\n",
     "    fringe = []\n",
@@ -127,7 +123,7 @@
     "            if u in path:\n",
     "                continue\n",
     "            for _, e in edges.items():\n",
-    "                cost = weight(v, u, e)\n",
+    "                cost = e['weight']\n",
     "                if cost is None:\n",
     "                    continue\n",
     "                vu_dist = d + cost\n",
