finding path without target

--- a/notebooks/conceptual_graph.ipynb
+++ b/notebooks/conceptual_graph.ipynb
@@ -29,9 +29,10 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from owlready2 import *\n",
+    "import owlready2\n",
     "from elasticsearch import Elasticsearch\n",
     "from mapping import *\n",
+    "from path import *\n",
     "from konlpy.tag import Okt"
    ]
   },
@@ -45,12 +46,16 @@
     "\n",
     "# Load owl file\n",
     "data_path = config['owl']['path']\n",
-    "onto = get_ontology(data_path).load()\n",
+    "onto = owlready2.get_ontology(data_path).load()\n",
     "\n",
     "# Elasticsearch\n",
     "server_ip = config['elasticsearch']['ip']\n",
     "index_name = config['elasticsearch']['name']\n",
-    "es = Elasticsearch(server_ip)"
+    "es = Elasticsearch(server_ip)\n",
+    "\n",
+    "# Load unit path data\n",
+    "unit_path = pd.read_csv('../unit_path.csv')\n",
+    "G = generate_graph(unit_path)"
    ]
   },
   {
@@ -59,44 +64,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unit_path_df = pd.read_csv('../unit_path_for_mapping.csv')"
+    "# okt = Okt()\n",
+    "\n",
+    "# query = input(\"Question: \") # 용감한 형제가 작곡한 노래의 장르는?\n",
+    "# query_pos = okt.pos(query, norm=True)\n",
+    "\n",
+    "# query_terms = [q[0] for q in query_pos if q[1] not in [\"Josa\", \"Punctuation\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "okt = Okt()\n",
-    "\n",
-    "query = input(\"Question: \") # 용감한 형제가 작곡한 노래의 장르는?\n",
-    "query_pos = okt.pos(query, norm=True)\n",
-    "\n",
-    "query_terms = [q[0] for q in query_pos if q[1] not in [\"Josa\", \"Punctuation\"]]"
+    "query_terms =['용감한', '형제', '작곡', '노래', '장르']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(SKMO_v2.4_0223.뱅뱅뱅, SKMO_v2.4_0223.isComposedBy, foaf.Person),\n",
-       " (SKMO_v2.4_0223.뱅뱅뱅_inst, SKMO_v2.4_0223.isComposedBy, foaf.Person),\n",
-       " (SKMO_v2.4_0223.뱅뱅뱅_황치열, SKMO_v2.4_0223.isComposedBy, foaf.Person)]"
+       "[['용감한 형제 작곡 노래 장르'],\n",
+       " ['용감한', '형제 작곡 노래 장르'],\n",
+       " ['용감한 형제', '작곡 노래 장르'],\n",
+       " ['용감한 형제 작곡', '노래 장르'],\n",
+       " ['용감한 형제 작곡 노래', '장르'],\n",
+       " ['용감한', '형제', '작곡 노래 장르'],\n",
+       " ['용감한', '형제 작곡', '노래 장르'],\n",
+       " ['용감한', '형제 작곡 노래', '장르'],\n",
+       " ['용감한 형제', '작곡', '노래 장르'],\n",
+       " ['용감한 형제', '작곡 노래', '장르'],\n",
+       " ['용감한 형제 작곡', '노래', '장르'],\n",
+       " ['용감한', '형제', '작곡', '노래 장르'],\n",
+       " ['용감한', '형제', '작곡 노래', '장르'],\n",
+       " ['용감한', '형제 작곡', '노래', '장르'],\n",
+       " ['용감한 형제', '작곡', '노래', '장르'],\n",
+       " ['용감한', '형제', '작곡', '노래', '장르']]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query_patitions = query_patitioning(query_terms)\n",
+    "query_patitions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['용감한 형제', '작곡', '노래', '장르']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "p_star, score_list = partition_scoring(es, index_name, query_patitions)\n",
+    "p_star"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(SKMO_v2.4_0223.용감한_형제,\n",
+       "  SKMO_v2.4_0223.isComposedBy,\n",
+       "  mo.Track,\n",
+       "  SKMO_v2.4_0223.hasGenre),\n",
+       " (SKMO_v2.4_0223.용감한_형제,\n",
+       "  SKMO_v2.4_0223.isComposedBy,\n",
+       "  mo.Track,\n",
+       "  SKMO_v2.4_0223.Genre)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "candidates_list = [onto.search(label=query) for query in p_star]\n",
     "resource_combinations = list(itertools.product(*candidates_list))\n",
     "resource_combinations"
@@ -104,36 +169,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[SKMO_v2.4_0223.MusicArtist, foaf.Person]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "onto.지드래곤.is_a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(SKMO_v2.4_0223.뱅뱅뱅, SKMO_v2.4_0223.isComposedBy, foaf.Person)]\n",
-      "[(SKMO_v2.4_0223.뱅뱅뱅_inst, SKMO_v2.4_0223.isComposedBy, foaf.Person)]\n",
-      "[(SKMO_v2.4_0223.뱅뱅뱅_황치열, SKMO_v2.4_0223.isComposedBy, foaf.Person)]\n"
+      "[(SKMO_v2.4_0223.용감한_형제, SKMO_v2.4_0223.isComposedBy, mo.Track), (mo.Track, SKMO_v2.4_0223.hasGenre, owl.Thing)]\n",
+      "[(SKMO_v2.4_0223.용감한_형제, SKMO_v2.4_0223.isComposedBy, mo.Track), (mo.Track, 'Any P', SKMO_v2.4_0223.Genre)]\n"
      ]
     }
    ],
@@ -156,7 +200,7 @@
     "    # 마지막이 edge일 때\n",
     "    if state_list[-1] == 'edge':\n",
     "        state_list.append('vertex')\n",
-    "        rc.append('owl.Thing')\n",
+    "        rc.append(owlready2.Thing)\n",
     "\n",
     "    # vertex - vertex 일때\n",
     "    index_list = []\n",
@@ -178,107 +222,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conceptual_arc = {}\n",
-    "df_list = []\n",
+    "candidates_dict = {}\n",
     "\n",
-    "for conceptual_arc in conceptual_graph[:1]:\n",
-    "    for s, p, o in conceptual_arc:\n",
-    "        s_cond = unit_path_df['S'] == str(s) \n",
-    "        d_cond = unit_path_df['domain'] == str(s)\n",
+    "for cg in conceptual_graph:\n",
+    "    \n",
+    "    for ca in cg:\n",
+    "        if ca in candidates_dict: \n",
+    "            continue\n",
+    "        else:\n",
+    "            candidates_dict[ca] = []\n",
     "\n",
-    "        p_cond = unit_path_df['P'] == str(p) \n",
+    "        d,p,r = ca\n",
     "\n",
-    "        o_cond = unit_path_df['O'] == str(o) \n",
-    "        r_cond = unit_path_df['range'] == str(o)\n",
+    "        if d and not G.has_node(str(d)):\n",
+    "            d = d.is_a\n",
+    "        else: d = [d]\n",
     "\n",
-    "        df = unit_path_df.loc[(s_cond|d_cond) & p_cond & (o_cond|r_cond)]\n",
-    "        df_list.append(df)"
+    "        if r and not G.has_node(str(r)):\n",
+    "            r = r.is_a\n",
+    "        else: r = [r]\n",
+    "\n",
+    "        p = [p]\n",
+    "\n",
+    "        for u,e,v in itertools.product(d,p,r):\n",
+    "            u = str(u)\n",
+    "            e = str(e)\n",
+    "            v = str(v)\n",
+    "\n",
+    "            if e == 'Any P': e=None \n",
+    "            if v == 'owl.Thing': v=None\n",
+    "\n",
+    "            result = find_shortest_path(G, u, v, e, n_triple=3) \n",
+    "            if len(result) == 0: continue\n",
+    "            candidates_dict[ca].append(result[::2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>S</th>\n",
-       "      <th>P</th>\n",
-       "      <th>O</th>\n",
-       "      <th>domain</th>\n",
-       "      <th>range</th>\n",
-       "      <th>S_dpr</th>\n",
-       "      <th>S_dr</th>\n",
-       "      <th>W</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>364</th>\n",
-       "      <td>SKMO_v2.4_0223.뱅뱅뱅</td>\n",
-       "      <td>SKMO_v2.4_0223.isComposedBy</td>\n",
-       "      <td>SKMO_v2.4_0223.지드래곤</td>\n",
-       "      <td>mo.Track</td>\n",
-       "      <td>foaf.Person</td>\n",
-       "      <td>36</td>\n",
-       "      <td>145</td>\n",
-       "      <td>0.248276</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>382</th>\n",
-       "      <td>SKMO_v2.4_0223.뱅뱅뱅</td>\n",
-       "      <td>SKMO_v2.4_0223.isComposedBy</td>\n",
-       "      <td>SKMO_v2.4_0223.Teddy</td>\n",
-       "      <td>mo.Track</td>\n",
-       "      <td>foaf.Person</td>\n",
-       "      <td>36</td>\n",
-       "      <td>145</td>\n",
-       "      <td>0.248276</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      S                            P                     O  \\\n",
-       "364  SKMO_v2.4_0223.뱅뱅뱅  SKMO_v2.4_0223.isComposedBy   SKMO_v2.4_0223.지드래곤   \n",
-       "382  SKMO_v2.4_0223.뱅뱅뱅  SKMO_v2.4_0223.isComposedBy  SKMO_v2.4_0223.Teddy   \n",
-       "\n",
-       "       domain        range  S_dpr  S_dr         W  \n",
-       "364  mo.Track  foaf.Person     36   145  0.248276  \n",
-       "382  mo.Track  foaf.Person     36   145  0.248276  "
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(SKMO_v2.4_0223.용감한_형제, SKMO_v2.4_0223.isComposedBy, mo.Track)의 shortest path\n",
+      "\n",
+      "(mo.Track, SKMO_v2.4_0223.hasGenre, owl.Thing)의 shortest path\n",
+      "['mo.Track', 'SKMO_v2.4_0223.Genre']\n",
+      "\n",
+      "(mo.Track, 'Any P', SKMO_v2.4_0223.Genre)의 shortest path\n",
+      "['mo.Track', 'SKMO_v2.4_0223.Genre']\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "pd.concat(df_list)"
+    "for k,v in candidates_dict.items():\n",
+    "    print(f'{k}의 shortest path')\n",
+    "    for elem in v:\n",
+    "        print(elem)\n",
+    "    print()"
    ]
   }
  ],
