another example for path finding

--- a/notebooks/shortest_path_finding.ipynb
+++ b/notebooks/shortest_path_finding.ipynb
@@ -6,9 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt"
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "from path import *\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -27,35 +28,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_graph():\n",
-    "    G = nx.MultiDiGraph()\n",
-    "\n",
-    "    for index, row in unit_path.iterrows():\n",
-    "        source = row['domain']  \n",
-    "        target = row['range']   \n",
-    "        edge = row['P']         \n",
-    "        weight = row['W']       \n",
-    "\n",
-    "        G.add_node(source)        \n",
-    "        G.add_node(target)\n",
-    "            \n",
-    "        G.add_edge(source, target, property=edge, weight=weight, label=edge)  # 엣지 추가\n",
-    "    \n",
-    "    return G"
+    "G = generate_graph(unit_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G = generate_graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,105 +43,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['schema.MusicAlbum', 'mo.Track', 'mo.MusicGroup', 'schema.Country']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = find_shortest_path(G, source_node, target_node)\n",
+    "result[::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['schema.MusicAlbum', 'mo.Track', 'mo.MusicGroup', 'schema.Country']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nx.shortest_path(G, source_node, target_node, weight='weight')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from heapq import heappop, heappush\n",
-    "from itertools import count\n",
-    "\n",
-    "TRIPLE_NUM = 4 # shortest path 길이 (triple 개수) 제한\n",
-    "\n",
-    "def find_shortest_path(G, source, target, p_name=None):\n",
-    "    push = heappush\n",
-    "    pop = heappop\n",
-    "    \n",
-    "    c = count()\n",
-    "    fringe = []\n",
-    "    path = [source]\n",
-    "    result = []\n",
-    "\n",
-    "    if source == target:\n",
-    "        return result\n",
-    "    \n",
-    "    push(fringe, (0, next(c), source, path))\n",
-    "\n",
-    "    while fringe:\n",
-    "        (d, loop, v, path) = pop(fringe)\n",
-    "\n",
-    "        # if len(path)//2 >= TRIPLE_NUM:\n",
-    "        #     continue\n",
-    "\n",
-    "        if path[-1] == target:\n",
-    "            if p_name is None or p_name in path:\n",
-    "                result.append((d,path))\n",
-    "            continue\n",
-    "\n",
-    "        for u, edges in G._adj[v].items():\n",
-    "            if u in path:\n",
-    "                continue\n",
-    "            for _, e in edges.items():\n",
-    "                cost = e['weight']\n",
-    "                if cost is None:\n",
-    "                    continue\n",
-    "                vu_dist = d + cost\n",
-    "\n",
-    "                new_path = list()\n",
-    "                new_path += path\n",
-    "                new_path += [e['property'], u]\n",
-    "\n",
-    "                push(fringe, (vu_dist, next(c), u, new_path))\n",
-    "    \n",
-    "    if len(result) == 0:\n",
-    "        raise nx.NetworkXNoPath(f\"Node {target} not reachable from {source} with {p_name}\")\n",
-    "    \n",
-    "    return sorted(result)[0][1][::2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['schema.MusicAlbum', 'mo.Track', 'mo.MusicGroup', 'schema.Country']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result = find_shortest_path(G, source_node, target_node, p_name=None)\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -176,14 +77,56 @@
        " 'schema.Country']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = find_shortest_path(G, source_node, target_node, p_name='schema.nationality')\n",
-    "result"
+    "result = find_shortest_path(G, source_node, target=target_node, p_name='schema.nationality')\n",
+    "result[::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['schema.MusicAlbum', 'foaf.Person', 'schema.Country']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = find_shortest_path(G, source_node, target=target_node, p_name='schema.nationality', n_triple=3)\n",
+    "result[::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mo.Track', 'mo.MusicGroup', 'foaf.Person', 'SKMO_v2.4_0223.MusicActivity']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = find_shortest_path(G, source_node, p_name='SKMO_v2.4_0223.hasMusicActivity')\n",
+    "result[::2]"
    ]
   }
  ],
